--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.sel.ujat.mx/Content/imagenes/favicon.ico">
     <link href="Servicios%20Escolares%20en%20L%C3%ADnea%20Archivos/css.css" rel="stylesheet">
 
-<link href="data:text/css,%3Ais(%5Bid*%3D'google_ads_iframe'%5D%2C%5Bid*%3D'taboola-'%5D%2C.taboolaHeight%2C.taboola-placeholder%2C%23credential_picker_container%2C%23credentials-picker-container%2C%23credential_picker_iframe%2C%5Bid*%3D'google-one-tap-iframe'%5D%2C%23google-one-tap-popup-container%2C.google-one-tap-modal-div%2C%23amp_floatingAdDiv%2C%23ez-content-blocker-container)%20%7Bdisplay%3Anone!important%3Bmin-height%3A0!important%3Bheight%3A0!important%3B%7D" rel="stylesheet" type="text/css"></head>
+<link href="styl.css" rel="stylesheet" type="text/css"></head>
 <body>
     <div id="wrapper">
             <section id="top">
